--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="./src/assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=80b0ced3a11c4571541a96080db6037e"></script>
   <title>마인드로잉</title>
 </head>
 
